ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations :
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-regex : "true"    
spec:
  ingressClassName : nginx
  rules:
    - http:
        paths:
        - path: /green(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: svc1
              port:
                number: 80
        - path: /pink(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: svc2
              port:
                number: 80                
        - path : /(.*)
          pathType: Prefix
          backend:
            service:
              name: svc1
              port:
                number: 80

-----
NGINX Ingress Helm Repository

helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
helm repo update

helm install my-ingress-nginx ingress-nginx/ingress-nginx --version 4.0.13
